package ma.ensias.soa.geoloc_service.enums;

public enum BusDirection {
    FORWARD,
    BACKWARD
}
